# pixelmapper

./: .gitignore  AGENTS.md  architecture.md  arcitecture.md  bun.lockb  nuxt.config.ts  ofl.md  package.json  test-flash.sh  test-matrix.js  test.js  test_esptool.py  test_fader.html
.github/workflows/: build-firmware.yml
aiBackendService/: CLAUDE.md  README.md  index.ts  package.json  test_schema.ts
aiBackendService/src/: graph.ts  model.ts  server.ts  state.ts
aiBackendService/src/nodes/: assembleOflDocument.ts  extractChannels.ts  extractGeneralInfo.ts  extractModes.ts  extractSingleChannel.ts  extractTextFromPdf.ts  identifyChannels.ts
aiBackendService/src/utils/: gemini-schema.ts  (+1 more)
app/: app.vue
app/components/: AppHeader.vue  GlobalContextMenu.vue
app/composables/: use-universe-inspector.ts  useGlobalContextMenu.ts
app/pages/: connections.vue  console.vue  index.vue  test-engine.vue
app/stores/: connections-store.ts  engine-store.ts  pinned-modifiers-store.ts  serial-store.ts
architecture/: binary-protocol.md  connectors.md  core-concepts.md  engine.md  state.md  ui-history.md
pio/: link_rust.py  platformio.ini  sdkconfig.defaults
pio/src/: main.cpp
rs-engine/: Cargo.toml
rs-engine/canvas/: Cargo.toml
rs-engine/canvas/src/: lib.rs  render.rs  spatial.rs  svg_render.rs  types.rs  wasm_bindings.rs
rs-engine/core/: Cargo.toml
rs-engine/core/src/: bin_protocol.rs  effects.rs  engine.rs  lib.rs  types.rs  wasm_bindings.rs
rs-engine/ffi/: Cargo.toml
rs-engine/src/: engine.rs  lib.rs
scripts/: release.ts  setup-ofl.sh
server/api/: firmware-proxy.ts
(+149 files in other folders)
