[package]
name = "rs-engine-canvas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
femtovg = "0.9"
glow = "0.13" 
rstar = "0.12"
usvg = { version = "0.41", default-features = false }
web-sys = { version = "0.3", features = ["WebGl2RenderingContext", "HtmlCanvasElement", "Window", "Document"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
default = ["console_error_panic_hook"]
